# oekolopoly

./: .gitignore  NASUTA_MODE.bat  README.md  SOVEREIGN_CONTROL_LOOP.md  SOVEREIGN_SYSTEMATIC_ENGINE.py  START_NASUTA_MODE.bat  START_SOVEREIGN.bat  get_spaces.py  mcts_fix_prior.py  oeko.docx  oeko2.docx  start_game.bat  test.py  test_gui.py  test_gui_sim.py  translator.py  utils.py  ~$oeko.docx  ~$oeko2.docx
gymcts-games-main/gymcts-games-main/: .gitignore  README.md  pyproject.toml  setup.cfg
gymcts-games-main/gymcts-games-main/src/experiments/: uml_diagrams.py
gymcts-games-main/gymcts-games-main/src/experiments/frozenlake/: frozenlake_wrappers.py
gymcts-games-main/gymcts-games-main/src/experiments/frozenlake/size4x4/: _mcts_4x4.py  _nmcts_4x4.py  masked_ppo_4x4.py  mcts_4x4.py  nmcts_4x4.py  run_mcts.sh  run_nmcts.sh
gymcts-games-main/gymcts-games-main/src/experiments/frozenlake/size6x6/: run_ppo.sh  (+7 more)
gymcts-games-main/gymcts-games-main/src/experiments/oekolopoly/: mcts_oeko.py  mppo_oeko.py  nmcts_oeko.py  run_mcts.sh  run_mppo.sh  run_nmcts.sh
gymcts-games-main/gymcts-games-main/src/frozenlake/: forzenlake_mcts_example_custom_map_timelimit_wrapper.py  frozenlake_generate_map_example.py  frozenlake_masked_ppo_example_custom_map.py  frozenlake_mcts_example_4x4.py  frozenlake_mcts_example_custom_map.py  frozenlake_mcts_with_masking_example_custom_map.py  frozenlake_neural_mcts_example_custom_map.py  frozenlake_ppo_example_custom_map.py  frozenlanke_masked_ppo_example_custom_map.py
gymcts-games-main/gymcts-games-main/src/oekolopoly/: mcts_oeko.py  mppo_oeko.py
(+65 files in other folders)
